APIMAN-619 - Build settings for Java 7 and earlier clients