@@ -27,6 +27,13 @@ The general idea is to keep your 'master' branch in-sync with the 'upstream/mast
 
 ## Building apiman
 
+####Note: If you're using JDK 7 or earlier, please allocate additional memory for Maven to its work within your user profile:
+  
+	Linux/OS X:
+		export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=256M"
+	Windows:
+		set MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=256M"
+
 We use Maven 3.x to build our software. The following command compiles all the code, installs the JARs into 
 your local Maven repository, and runs all of the unit tests:
 
